--- a/src/main/resources/assets/fstats-api/lang/en_us.json
+++ b/src/main/resources/assets/fstats-api/lang/en_us.json
@@ -10,7 +10,7 @@
   "fstats_info.button.official_page": "Official Page",
   "fstats_info.button.collect_mode": "Collect",
   "fstats.event.world": "After entering world",
-  "fstats.event.world.description": "Next data will be collected anonymously after you spawn in world every",
+  "fstats.event.world.description": "Next data will be collected anonymously after you enter world",
   "fstats.collect.country_code" : "Country Code",
   "fstats.collect.fabric_api_version" : "Fabric API Version",
   "fstats.collect.minecraft_version" : "Minecraft Version",
